# placeholder-fc

./: CMakeLists.txt  README.md  build.sh  build_and_upload.sh  flake.nix  upload.sh
scripts/: bootsel  bootsel.c  build.sh  upload.sh
src/: controller.cpp  controller.hpp  lora.cpp  main.c  main.cpp  motors.c  motors.h  mpu6050.c  mpu6050.h  util.c  util.h
